Added link to GitHub Repos

--- a/index.html
+++ b/index.html
@@ -186,9 +186,17 @@
                 <div class="col-lg-6">
                     <h1 class="display-3 fw-bold mb-4">CiviClinic</h1>
                     <p class="lead mb-4">Revolutionizing healthcare accessibility through AI-powered solutions and real doctor integration.</p>
-                    <a href="https://docs.google.com/presentation/d/1cwjCoChzZpStpoHhrhAns2pQUHRWMhST_kjO578GwJc/edit?usp=sharing" class="btn btn-light btn-lg" target="_blank">
-                        View Presentation
-                    </a>
+                    <div class="d-flex gap-3 mb-4">
+                        <a href="https://docs.google.com/presentation/d/1cwjCoChzZpStpoHhrhAns2pQUHRWMhST_kjO578GwJc/edit?usp=sharing" class="btn btn-light btn-lg" target="_blank">
+                            <i class="fas fa-presentation"></i> View Presentation
+                        </a>
+                        <a href="https://github.com/SarveshwarSenthilKumar/CiviClinic" class="btn btn-light btn-lg" target="_blank">
+                            <i class="fab fa-github"></i> Main Repository
+                        </a>
+                        <a href="https://github.com/SarveshwarSenthilKumar/CiviClinic-Models" class="btn btn-light btn-lg" target="_blank">
+                            <i class="fas fa-brain"></i> ML Models
+                        </a>
+                    </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="floating">
